# hermes-tescmd-plugin

./: .gitignore  CHANGELOG.md  ENDPOINT_COVERAGE.md  INSTALL.md  PUBLISHING.md  README.md  RELEASE.md  pyproject.toml
.github/workflows/: ci.yml  publish-to-pypi.yml
docs/: ONBOARDING.md
docs/plans/: 2026-04-19-complete-native-command-surface.md  2026-04-19-native-plugin-rewrite.md  2026-04-19-onboarding-wizard-parity.md  2026-04-19-signed-command-protocol.md
scripts/: e2e_readonly_audit.py  live_fire_non_driving.py
src/hermes_tescmd_plugin/: __init__.py  audit.py  auth.py  client.py  config.py  errors.py  runtime.py  schemas.py  slash.py  tools.py
src/hermes_tescmd_plugin/crypto/: __init__.py
src/hermes_tescmd_plugin/dashboard/: __init__.py  manifest.json  plugin_api.py
src/hermes_tescmd_plugin/dashboard/assets/: index.js  style.css
src/hermes_tescmd_plugin/protocol/: __init__.py  commands.py  encoder.py  metadata.py  payloads.py  session.py  signer.py
src/hermes_tescmd_plugin/protocol/protobuf/: messages.py
src/hermes_tescmd_plugin/skills/tescmd-operator/: SKILL.md
tests/: test_audit.py  test_plugin.py  test_slash_dashboard.py
